update: Slef-host font to avoid layout shifts

--- a/client/src/assets/css/tailwind.css
+++ b/client/src/assets/css/tailwind.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Switzer';
+  src: url(~/assets/fonts/Switzer-Variable.ttf) format('truetype');
+  font-weight: 300 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Switzer';
+  src: url(~/assets/fonts/Switzer-VariableItalic.ttf) format('truetype');
+  font-weight: 300 700;
+  font-style: italic;
+}
+
 @layer components {
 }
 
